--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 alembic==1.16.5
+bcrypt==4.1.3
 fastapi==0.128.1
 geoalchemy2==0.18.1
 httpx==0.28.1
 pydantic==2.12.5
 pydantic_settings==2.12.0
 python-dotenv==1.2.1
+python-jose==3.3.0
 SQLAlchemy==2.0.46
 uvicorn==0.40.0
 psycopg2-binary==2.9.11
