--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 alembic==1.16.5
-bcrypt==4.1.3
-fastapi==0.128.1
+email_validator==2.3.0
+fastapi==0.128.6
 geoalchemy2==0.18.1
 httpx==0.28.1
+passlib==1.7.4
 pydantic==2.12.5
 pydantic_settings==2.12.0
 python-dotenv==1.2.1
-python-jose==3.3.0
+python_jose==3.5.0
 SQLAlchemy==2.0.46
+supabase==2.27.3
 uvicorn==0.40.0
-psycopg2-binary==2.9.11
-requests==2.32.5
