--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,13 @@ services:
   # 1. 우리 FastAPI 서버
   backend:
     container_name: baebulook-app
-    build: .
+    # build: .  <-- 이 줄을 지우거나 #으로 주석 처리하세요!
+    image: jeongtaekim97/matzip-backend:latest  # <-- 방금 올린 이미지 주소 입력
     restart: always
     env_file:
       - .env
     expose:
-      - "8000"  # 외부에는 노출 안 하고, 같은 도커 네트워크 안의 Nginx에게만 8000번 열어줌
+      - "8000"
 
   # 2. Nginx + SSL 관리자 (초보자 강추)
   nginx-proxy-manager:
